TWINS-913: link relation twin support (#1082)